qbittorrent/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: web
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-lb-tcp
  annotations:
    metallb.universe.tf/allow-shared-ip: phosphorous
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.178.15
  ports:
    - protocol: TCP
      port: 50000
      targetPort: 50000
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-lb-udp
  annotations:
    metallb.universe.tf/allow-shared-ip: phosphorous
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.178.15
  ports:
    - protocol: UDP
      port: 6881
      targetPort: 6881
