qbittorrent/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  ingressClassName: public
  tls:
    - secretName: qbittorrent-ingress-tls
      hosts:
        - torrent.sergi.cool
  rules:
    - host: torrent.sergi.cool
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: qbittorrent
                port:
                  name: web
